--- a/src/components/layout/header/styles.css
+++ b/src/components/layout/header/styles.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding-left: 10px;
+  padding: 0px 0px 0px 20px;
   margin-right: 15px;
   border-bottom: 1px solid #F8F8F9;
 
